--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -8,7 +8,7 @@
       Temporarily disable cerner-smart-embeddable-lib
       <link rel='stylesheet' type='text/css' href='./lib/css/cerner-smart-embeddable-lib-1.0.0.min.css'>
     -->
-    <title>AnimaSMART-App</title>
+    <title>example-smart-app</title>
   </head>
   <body>
     <!-- Required JS files to enable this page to embed within an MPage -->
@@ -23,7 +23,7 @@
 
     <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
     <!-- https://github.com/cerner/fhir-client-cerner-additions -->
-    <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
+    <script src='./src/js/example-smart-app.js'></script>
     <script>
       FHIR.oauth2.authorize({
         'client_id': 'a686e36f-2afc-41ed-b494-8871cc19c06e',
