--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -23,7 +23,7 @@
 
     <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
     <!-- https://github.com/cerner/fhir-client-cerner-additions -->
-    <script src='./src/js/example-smart-app.js'></script>
+    <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
         'client_id': 'a686e36f-2afc-41ed-b494-8871cc19c06e',
