--- a/example-smart-app/src/launch.html
+++ b/example-smart-app/src/launch.html
@@ -26,7 +26,7 @@
 
                 iss: "https://launch.smarthealthit.org/v/r4/sim/eyJoIjoiMSJ9/fhir",
 
-                redirectUri: "https://rkapoor1919.github.io/smart-on-fhir-tutorial/example-smart-app/src/index"
+                redirectUri: "https://rkapoor1919.github.io/smart-on-fhir-tutorial/example-smart-app/src/index
             });
 
         </script>
