--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -26,7 +26,7 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': 'a686e36f-2afc-41ed-b494-8871cc19c06e',
+        'client_id': 'a686e36f-2afc-41ed-b494-8871cc19c06',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
       });
     </script>
