--- a/example-smart-app/src/launch.html
+++ b/example-smart-app/src/launch.html
@@ -25,7 +25,7 @@
                     "patient/Patient.read"    // Read patient data
                  ].join(" "),
 				 
-                iss: "https://launch.smarthealthit.org/v/r4/sim/eyJoIjoiMSJ9/fhir",
+                iss: "https://api.logicahealth.org/Anima/open",
 
                 redirectUri: "https://rkapoor1919.github.io/smart-on-fhir-tutorial/example-smart-app/src/index
             });
