--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -6,7 +6,13 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Static Template</title>
         <link rel="stylesheet" href="../style.css">
-   <script src="https://combinatronics.com/smart-on-fhir/client-js/master/dist/build/fhir-client.js"></script>
+		<!-- FHIR Client JS Library -->
+		<script src='./lib/js/fhir-client-v0.1.12.js'></script>
+
+		<!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
+		<!-- https://github.com/cerner/fhir-client-cerner-additions -->
+		<script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="src/app.js"></script>
     </head>
     <body>
