--- a/example-smart-app/src/launch.html
+++ b/example-smart-app/src/launch.html
@@ -30,7 +30,7 @@
                     "patient/Patient.read"    // Read patient data
                  ].join(" "),
 				 
-                iss: "https://api.logicahealth.org/Anima/open",
+                iss: "https://api.logicahealth.org/Anima/data",
 
                 redirectUri: "https://rkapoor1919.github.io/smart-on-fhir-tutorial/example-smart-app/src/index
             });
