--- a/example-smart-app/src/launch.html
+++ b/example-smart-app/src/launch.html
@@ -30,9 +30,9 @@
                     "patient/Patient.read"    // Read patient data
                  ].join(" "),
 				 
-                iss: "https://api.logicahealth.org/Anima/data",
+                //iss: "https://api.logicahealth.org/Anima/data",
 
-                redirectUri: "https://rkapoor1919.github.io/smart-on-fhir-tutorial/example-smart-app/src/index
+                //redirectUri: "https://rkapoor1919.github.io/smart-on-fhir-tutorial/example-smart-app/src/index
             });
 
         </script>
