--- a/example-smart-app/src/launch.html
+++ b/example-smart-app/src/launch.html
@@ -30,9 +30,9 @@
                     "patient/Patient.read"    // Read patient data
                  ].join(" "),
 				 
-                //iss: "https://api.logicahealth.org/Anima/data",
+                iss: "https://launch.smarthealthit.org/v/r4/sim/eyJoIjoiMSJ9/fhir",
 
-                //redirectUri: "https://rkapoor1919.github.io/smart-on-fhir-tutorial/example-smart-app/src/index
+                redirectUri: "https://rkapoor1919.github.io/smart-on-fhir-tutorial/example-smart-app/src/index
             });
 
         </script>
