--- a/example-smart-app/src/test.html
+++ b/example-smart-app/src/test.html
@@ -1,20 +1,42 @@
-<html>
-<head>
-    <title>Javascript Login Form Validation</title>
-    <script src="login.js"></script>
-</head>
-<body>
-    <div class="container">
-        <div class="main">
-            <h2>Javascript Login Form Validation</h2>
-            <form id="form_id" method="post" name="myform">
-                <label>User Name :</label>
-                <input type="text" name="username" id="username"/>
-                <label>Password :</label>
-                <input type="password" name="password" id="password"/>
-                <input type="button" value="Login" id="submit" onclick="validate()"/>
-            </form>             
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Static Template</title>
+        <link rel="stylesheet" href="../style.css">
+    <!-- FHIR Client JS Library -->
+    <script src='./lib/js/fhir-client-v0.1.12.js'></script>
+
+    <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
+    <!-- https://github.com/cerner/fhir-client-cerner-additions -->
+    <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
+    <script src="./js/example-smart-app.js"></script>
+    </head>
+    <body>
+        <div class="cell top-left">
+            <h4>Current Patient</h4>
+            <pre id="patient"></pre>
         </div>
-    </div>
-</body>
+        <div class="cell top-center">
+            <h4>Current User</h4>
+            <pre id="user"></pre>
+        </div>
+        <div class="cell top-right">
+            <h4>Current Encounter</h4>
+            <pre id="encounter"></pre>
+        </div>
+        <div class="cell bottom">
+            <h4>Main Output</h4>
+            <pre id="output">Loading...</pre>
+        </div>
+        <script type="text/javascript">
+            FHIR.oauth2.ready().then(function(client) {
+                var app = new App(client);
+                app.renderContext();
+                app.request("metadata");
+            }).catch(createRenderer("output"));
+        </script>
+    </body>
 </html>
