--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -7,11 +7,11 @@
         <title>Static Template</title>
         <link rel="stylesheet" href="../style.css">
     <!-- FHIR Client JS Library -->
-    <script src='./lib/js/fhir-client-v0.1.12.js'></script>
+    <script src='./../lib/js/fhir-client-v0.1.12.js'></script>
 
     <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
     <!-- https://github.com/cerner/fhir-client-cerner-additions -->
-    <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
+    <script src='./../lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script src="app.js"></script>
     </head>
     <body>
