--- a/example-smart-app/src/launch.html
+++ b/example-smart-app/src/launch.html
@@ -18,23 +18,16 @@
 
                 // The client_id that you should have obtained after registering a client at
                 // the EHR.
-                clientId: "a686e36f-2afc-41ed-b494-8871cc19c06e",
+                'client_id': "a686e36f-2afc-41ed-b494-8871cc19c06e",
 
                 // The scopes that you request from the EHR
-                scope: [
-                    "launch",           // Get the launch context in EHR launch mode
-                    "launch/patient",   // Get the current patient in standalone launch mode
-                    "launch/encounter", // Get the current encounter in standalone launch mode
-                    "online_access openid profile",  // Get the current user
-					"patient/Observation.read",
-                    "patient/Patient.read"    // Read patient data
-                 ].join(" "),
+                'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'  
 				 
-                iss: "https://launch.smarthealthit.org/v/r4/sim/eyJoIjoiMSJ9/fhir",
+               // iss: "https://launch.smarthealthit.org/v/r4/sim/eyJoIjoiMSJ9/fhir",
 
                 redirectUri: "https://rkapoor1919.github.io/smart-on-fhir-tutorial/example-smart-app/src/index
             });
-
+  
         </script>
     </body>
 </html>
