--- a/example-smart-app/launch-patient.html
+++ b/example-smart-app/launch-patient.html
@@ -1,39 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel='stylesheet' type='text/css' href='./src/css/example-smart-app.css'>
-    <!--
-      Temporarily disable cerner-smart-embeddable-lib
-      <link rel='stylesheet' type='text/css' href='./lib/css/cerner-smart-embeddable-lib-1.0.0.min.css'>
-    -->
-    <title>Example-SMART-App</title>
-  </head>
-  <body>
-    <!-- Required JS files to enable this page to embed within an MPage -->
-    <!--
-      Temporarily disable cerner-smart-embeddable-lib
-      <script src='https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js'></script>
-      <script src='./lib/js/cerner-smart-embeddable-lib-1.0.0.min.js'></script>
-    -->
+<html>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Static Template</title>
 
-    <!-- FHIR Client JS Library -->
+       <!-- FHIR Client JS Library -->
     <script src='./lib/js/fhir-client-v0.1.12.js'></script>
 
     <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
     <!-- https://github.com/cerner/fhir-client-cerner-additions -->
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
-    <script>
-      FHIR.oauth2.authorize({
-        'client_id': '22fc46e7-3fdf-4d0b-83c0-fc9eaf6ad242',
-        'scope':  'patient/Patient.read patient/Observation.read launch/patient online_access openid profile'
-      });
-    </script>
-    <div class="spinner">
-      <div class="bounce1"></div>
-      <div class="bounce2"></div>
-      <div class="bounce3"></div>
-    </div>
-  </body>
+    </head>
+    <body>
+        <script>
+            FHIR.oauth2.authorize({
+
+                // The client_id that you should have obtained after registering a client at
+                // the EHR.
+                clientId: "a686e36f-2afc-41ed-b494-8871cc19c06e",
+
+                // The scopes that you request from the EHR
+                scope: [
+                    "launch",           // Get the launch context in EHR launch mode
+                    "launch/patient",   // Get the current patient in standalone launch mode
+                    "launch/encounter", // Get the current encounter in standalone launch mode
+                    "openid fhirUser online_access offline_access profile",  // Get the current user
+                    "patient/*.read"    // Read patient data
+                 ].join(" "),
+
+                iss: "https://api.logicahealth.org/Anima/data",
+
+
+                redirectUri: "https://rkapoor1919.github.io/smart-on-fhir-tutorial/example-smart-app/"
+            });
+
+        </script>
+    </body>
 </html>
