--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -28,6 +28,9 @@
       FHIR.oauth2.authorize({
         'client_id': '22fc46e7-3fdf-4d0b-83c0-fc9eaf6ad242',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
+		                iss: "https://launch.smarthealthit.org/v/r4/sim/eyJoIjoiMSJ9/fhir",
+
+                redirectUri: "https://rkapoor1919.github.io/smart-on-fhir-tutorial/example-smart-app/src/index
       });
     </script>
     <div class="spinner">
