--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -11,8 +11,8 @@
     </head>
     <body>
         <div class="cell top-left">
-            <h4>Current Patient</h4>
-            <pre id="client"></pre>
+            <h4>Current tttttttt</h4>
+            <pre id="patient"></pre>
         </div>
         <div class="cell top-center">
             <h4>Current User</h4>
