--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="cell top-left">
-            <h4>Current tttttttt</h4>
+            <h4>Currentjjjjjjj</h4>
             <pre id="patient"></pre>
         </div>
         <div class="cell top-center">
@@ -28,8 +28,6 @@
         </div>
         <script type="text/javascript">
             FHIR.oauth2.ready().then(function(client) {
-				console.log(client);
-				console.log("inside+++++");
                 var app = new App(client);
                 app.renderContext();
                 app.request("metadata");
