--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -12,7 +12,7 @@
     <body>
         <div class="cell top-left">
             <h4>Currentjjjjjjj</h4>
-            <pre id="patient"></pre>
+            <pre id="client"></pre>
         </div>
         <div class="cell top-center">
             <h4>Current User</h4>
@@ -31,6 +31,7 @@
                 var app = new App(client);
                 app.renderContext();
                 app.request("metadata");
+				console.log(client);
             }).catch(createRenderer("output"));
         </script>
     </body>
