--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -7,7 +7,7 @@
         <title>Static Template</title>
         <link rel="stylesheet" href="../style.css">
 <script src="https://combinatronics.com/smart-on-fhir/client-js/master/dist/build/fhir-client.js"></script>
-    <script src="./js/example-smart-app.js"></script>
+     <script src="./js/example-smart-app.js"></script>
     </head>
     <body>
         <div class="cell top-left">
@@ -26,13 +26,11 @@
             <h4>Main Output</h4>
             <pre id="output">Loading...</pre>
         </div>
-        <script type="text/javascript">
-            FHIR.oauth2.ready().then(function(client) {
-                var app = new App(client);
-                app.renderContext();
-                app.request("metadata");
-				console.log(client)
-            }).catch(createRenderer("output"));
-        </script>
+		<script>
+		FHIR.oauth2.ready()
+			.then(client => client.request("Patient"))
+			.then(console.log)
+			.catch(console.error);
+		</script>
     </body>
 </html>
