--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -27,7 +27,10 @@
             <pre id="output">Loading...</pre>
         </div>
 		 <script type="text/javascript">
-		FHIR.oauth2.ready().then(client => client.api.search({ type: "Patient" }))
+		FHIR.oauth2.ready(client => client.request(`Patient/${client.patient.id}`));
+		</script>
+	    <script type="text/javascript">
+		FHIR.oauth2.ready(client => client.request(client.user.fhirUser));
 		</script>
         <script type="text/javascript">
             FHIR.oauth2.ready().then(function(client) {
