--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -7,8 +7,10 @@
         <title>Static Template</title>
         <link rel="stylesheet" href="../style.css">
 <script src="https://combinatronics.com/smart-on-fhir/client-js/master/dist/build/fhir-client.js"></script>
+    <script src="./js/example-smart-app.js"></script>
     </head>
     <body>
+
 		 <script type="text/javascript">
 		FHIR.oauth2.ready(client => client.request(`Patient/${client.patient.id}`));
 		</script>
