--- a/example-smart-app/example-smart-app/launch.html
+++ b/example-smart-app/example-smart-app/launch.html
@@ -24,6 +24,7 @@
     <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
     <!-- https://github.com/cerner/fhir-client-cerner-additions -->
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
+	<script src="https://combinatronics.com/smart-on-fhir/client-js/master/dist/build/fhir-client.js"></script>
     <script>
       FHIR.oauth2.authorize({
         'client_id': '22fc46e7-3fdf-4d0b-83c0-fc9eaf6ad242',
