--- a/example-smart-app/example-smart-app/index.html
+++ b/example-smart-app/example-smart-app/index.html
@@ -74,6 +74,7 @@
     -->
 
     <!-- Application-level javascript-->
+    <script src='./src/js/example-smart-app.js'></script>
     <script src='https://rkapoor1919.github.io/smart-on-fhir-tutorial/example-smart-app/src/js/example-smart-app.js'></script>
 
     <!-- FHIR Client JS Library -->
