--- a/example-smart-app/src/index1.html
+++ b/example-smart-app/src/index1.html
@@ -6,23 +6,31 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Static Template</title>
         <link rel="stylesheet" href="../style.css">
-<script src="https://combinatronics.com/smart-on-fhir/client-js/master/dist/build/fhir-client.js"></script>
-    <script src="./js/example-smart-app.js"></script>
+        <script src="https://combinatronics.com/smart-on-fhir/client-js/master/dist/build/fhir-client.js"></script>
+        <script src="../app.js"></script>
     </head>
     <body>
-
-		 <script type="text/javascript">
-		FHIR.oauth2.ready(client => client.request(`Patient/${client.patient.id}`));
-		</script>
-	    <script type="text/javascript">
-		FHIR.oauth2.ready(client => client.request(client.user.fhirUser));
-		</script>
+        <div class="cell top-left">
+            <h4>Current Patient</h4>
+            <pre id="patient"></pre>
+        </div>
+        <div class="cell top-center">
+            <h4>Current User</h4>
+            <pre id="user"></pre>
+        </div>
+        <div class="cell top-right">
+            <h4>Current Encounter</h4>
+            <pre id="encounter"></pre>
+        </div>
+        <div class="cell bottom">
+            <h4>Main Output</h4>
+            <pre id="output">Loading...</pre>
+        </div>
         <script type="text/javascript">
             FHIR.oauth2.ready().then(function(client) {
                 var app = new App(client);
                 app.renderContext();
                 app.request("metadata");
-				console.log(client)
             }).catch(createRenderer("output"));
         </script>
     </body>
