--- a/example-smart-app/src/launch.html
+++ b/example-smart-app/src/launch.html
@@ -24,9 +24,10 @@
                 // The scopes that you request from the EHR
                 'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'  
 				 
-               // iss: "https://launch.smarthealthit.org/v/r4/sim/eyJoIjoiMSJ9/fhir",
+                iss: "https://api.logicahealth.org/Anima/data",
 
-               // redirectUri: "https://rkapoor1919.github.io/smart-on-fhir-tutorial/example-smart-app/src/index
+
+                redirectUri: "https://rkapoor1919.github.io/smart-on-fhir-tutorial/example-smart-app/src"
             });
   
         </script>
