--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
     <title>rkapoor1919 Example-SMART-App</title>
 
-    <link rel='stylesheet' type='text/css' href='./src/css/example-smart-app.css'>
+    <link rel='stylesheet' type='text/css' href='./css/example-smart-app.css'>
     <!--
       Temporarily disable cerner-smart-embeddable-lib
       <link rel='stylesheet' type='text/css' href='./lib/css/cerner-smart-embeddable-lib-1.0.0.min.css'>
@@ -74,8 +74,8 @@
     -->
 
     <!-- Application-level javascript-->
-    <script src='https://rkapoor1919.github.io/smart-on-fhir-tutorial/example-smart-app/src/js/example-smart-app.js'></script>
-
+ 
+    <script src='./js/example-smart-app.js'></script>
     <!-- FHIR Client JS Library -->
     <script src='./lib/js/fhir-client-v0.1.12.js'></script>
 
