--- a/example-smart-app/src/launch.html
+++ b/example-smart-app/src/launch.html
@@ -24,7 +24,7 @@
                 // The scopes that you request from the EHR
                 'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'  
 				 
-                iss: "https://api.logicahealth.org/Anima/data",
+                iss: "https://api.logicahealth.org/Anima/open",
 
 
                 redirectUri: "https://rkapoor1919.github.io/smart-on-fhir-tutorial/example-smart-app/src"
