--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -28,7 +28,7 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': 'a686e36f-2afc-41ed-b494-8871cc19c06e',
-        'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
+        'scope':  'patient/Patient.read patient/Observation.read launch launch/patient online_access openid profile'
       });
     </script>
     <div class="spinner">
