--- a/example-smart-app/src/launch.html
+++ b/example-smart-app/src/launch.html
@@ -22,7 +22,7 @@
                 'client_id': "a686e36f-2afc-41ed-b494-8871cc19c06e",
 
                 // The scopes that you request from the EHR
-                'scope':  'patient/Patient.read patient/Observation.read launch launch/patient online_access openid profile',  
+                'scope':  'patient/Patient.read patient/Observation.read launch/patient online_access openid profile',  
 				 
                 iss: "https://api.logicahealth.org/Anima/data",
 
