--- a/example-smart-app/src/index1.html
+++ b/example-smart-app/src/index1.html
@@ -7,7 +7,7 @@
         <title>Static Template</title>
         <link rel="stylesheet" href="../style.css">
         <script src="https://combinatronics.com/smart-on-fhir/client-js/master/dist/build/fhir-client.js"></script>
-        <script src="app.js"></script>
+        <script src="./app.js"></script>
     </head>
     <body>
         <div class="cell top-left">
