--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -75,7 +75,7 @@
 
     <!-- Application-level javascript-->
  
-    <script src='./src/js/example-smart-app.js'></script>
+    <script src='./js/example-smart-app.js'></script>
 
 	<script src="https://combinatronics.com/smart-on-fhir/client-js/master/dist/build/fhir-client.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
