--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -20,7 +20,7 @@
 		<br /> <input type="submit" value='Submit' />
 	</form>
 	<div class="cell top-left">
-		<h4>Current Patient</h4>
+		<h4>Current Patientssss</h4>
 		<pre id="patient"></pre>
 	</div>
 	<div class="cell top-center">
