--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="cell top-left">
-            <h4>Current Patient</h4>
+            <h4>Current Patienttttttttttt</h4>
             <pre id="patient"></pre>
         </div>
         <div class="cell top-center">
