--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -12,8 +12,9 @@
 </head>
 <body>
 	<div class="cell top-left">
-		<form action="PParser" method="GET">
+		<form action="Parser" method="GET">
 			<pre id="patient"></pre>
+			
 			<br /> <input type="submit" value='Submit' />
 		</form>
 		<h4>Current Patienttttttttttt</h4>
