--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -14,9 +14,10 @@
 	<div class="cell top-left">
 		<form action="Parser.jsp" method="GET">
 			<pre id="patient"></pre>
-			
+
 			<br /> <input type="submit" value='Submit' />
 		</form>
+<div id="button"><a href="index2.html">Log In</a></div>
 		<h4>Current Patienttttttttttt</h4>
 		<pre id="patient"></pre>
 	</div>
