--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -17,7 +17,7 @@
 
 			<br /> <input type="submit" value='Submit' />
 		</form>
-<div id="button"><a href="index2.html">Log In</a></div>
+<div id="button"><a href="Parser.jsp">Log In</a></div>
 		<h4>Current Patienttttttttttt</h4>
 		<pre id="patient"></pre>
 	</div>
