--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<div class="cell top-left">
-		<form action="Parser.jsp" method="GET">
+		<form action="PParser" method="GET">
 			<pre id="patient"></pre>
 
 			<br /> <input type="submit" value='Submit' />
