--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
 	<div class="cell top-left">
-		<form action="Parser" method="GET">
-			<pre id="patient"></pre>
-
-			<br /> <input type="submit" value='Submit' />
-		</form>
+<form action="StudentServlet" method="GET">
+	FIRST NAME: <input type="text" name="firstname" /><br/><br/>
+	LAST NAME: <input type="text" name="lastname" /><br/><br/>
+	<input type="submit" value='Submit'/>
+</form>
 <div id="button"><a href="PParser.java">Log In</a></div>
 		<h4>Current Patienttttttttttt</h4>
 		<pre id="patient"></pre>
