--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<div class="cell top-left">
-<form action="StudentServlet" method="GET">
+<form action="PParser" method="GET">
 	FIRST NAME: <input type="text" name="firstname" /><br/><br/>
 	LAST NAME: <input type="text" name="lastname" /><br/><br/>
 	<input type="submit" value='Submit'/>
