--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -9,6 +9,7 @@
 <script
 	src="https://combinatronics.com/smart-on-fhir/client-js/master/dist/build/fhir-client.js"></script>
 <script src="./app.js"></script>
+<script src="./Parser.jsp"></script>
 </head>
 <body>
 	<div class="cell top-left">
@@ -17,7 +18,7 @@
 	LAST NAME: <input type="text" name="lastname" /><br/><br/>
 	<input type="submit" value='Submit'/>
 </form>
-<div id="button"><a href="PParser.java">Log In</a></div>
+<div id="button"><a href="Parser.jsp">Log In</a></div>
 		<h4>Current Patienttttttttttt</h4>
 		<pre id="patient"></pre>
 	</div>
