--- a/example-smart-app/src/launch.html
+++ b/example-smart-app/src/launch.html
@@ -11,7 +11,7 @@
     <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
     <!-- https://github.com/cerner/fhir-client-cerner-additions -->
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
-	<!--<script src="https://combinatronics.com/smart-on-fhir/client-js/master/dist/build/fhir-client.js"></script> -->
+	<script src="https://combinatronics.com/smart-on-fhir/client-js/master/dist/build/fhir-client.js"></script>
     </head>
     <body>
         <script>
