--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -9,9 +9,13 @@
 <script
 	src="https://combinatronics.com/smart-on-fhir/client-js/master/dist/build/fhir-client.js"></script>
 <script src="./app.js"></script>
-
+<script src="./Parser.jsp"></script>
 </head>
 <body>
+	<div class="cell top-left">
+		<h4>Current Patienttttttttttt</h4>
+		<pre id="patient"></pre>
+	</div>
 	<div class="cell top-center">
 		<h4>Current User</h4>
 		<pre id="user"></pre>
