--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -6,10 +6,11 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 <title>Static Template</title>
 <link rel="stylesheet" href="../style.css">
-<script
-	src="https://combinatronics.com/smart-on-fhir/client-js/master/dist/build/fhir-client.js"></script>
+<script src='./lib/js/fhir-client-v0.1.12.js'></script>
+<!-- <script
+	src="https://combinatronics.com/smart-on-fhir/client-js/master/dist/build/fhir-client.js"></script> -->
+<script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
 <script src="./app.js"></script>
-<script src="./Parser.jsp"></script>
 </head>
 <body>
 	<div class="cell top-left">
