--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 <title>Static Template</title>
 <link rel="stylesheet" href="../style.css">
-<script src='./lib/js/fhir-client-v0.1.12.js'></script>
+<!-- <script src='./lib/js/fhir-client-v0.1.12.js'></script> -->
 <script
 	src="https://combinatronics.com/smart-on-fhir/client-js/master/dist/build/fhir-client.js"></script>
 
