--- a/example-smart-app/src/launch.html
+++ b/example-smart-app/src/launch.html
@@ -6,11 +6,11 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Static Template</title>
     <!-- FHIR Client JS Library -->
-    <script src='./lib/js/fhir-client-v0.1.12.js'></script>
+    <!--  <script src='./lib/js/fhir-client-v0.1.12.js'></script> -->
 
     <!-- Prevent session bleed caused by single threaded embedded browser and sessionStorage API -->
     <!-- https://github.com/cerner/fhir-client-cerner-additions -->
-    <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
+    <!-- <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>-->
 	<script src="https://combinatronics.com/smart-on-fhir/client-js/master/dist/build/fhir-client.js"></script>
     </head>
     <body>
