--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -7,9 +7,8 @@
 <title>Static Template</title>
 <link rel="stylesheet" href="../style.css">
 <!-- <script src='./lib/js/fhir-client-v0.1.12.js'></script> -->
-<script
-	src="https://combinatronics.com/smart-on-fhir/client-js/master/dist/build/fhir-client.js"></script>
-
+<!-- <script src="https://combinatronics.com/smart-on-fhir/client-js/master/dist/build/fhir-client.js"></script> -->
+<script src="./fhir-client.js"></script>
 <script src="./app.js"></script>
 </head>
 <body>
