--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -24,6 +24,10 @@
 		<h4>Current Encounter</h4>
 		<pre id="encounter"></pre>
 	</div>
+		<div class="cell top-right">
+		<h4>Current Observation</h4>
+		<pre id="observation"></pre>
+	</div>
 	<div class="cell bottom">
 		<h4>Main Output</h4>
 		<pre id="output">Loading...</pre>
