--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -37,6 +37,7 @@
                 var app = new App(client);
                 app.renderContext();
                 app.request("metadata");
+                app.request("observation");
             }).catch(createRenderer("output"));
         </script>
 </body>
