--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -78,7 +78,7 @@
     <script src='./example-smart-app.js'></script>
 
 	<script src="https://combinatronics.com/smart-on-fhir/client-js/master/dist/build/fhir-client.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!--   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
     <script>
       extractData().then(
         //Display Patient Demographics and Observations if extractData was success
