--- a/example-smart-app/src/index.html
+++ b/example-smart-app/src/index.html
@@ -12,6 +12,7 @@
 <script src="./app.js"></script>
 </head>
 <body>
+<a href="student-form.html">Go the second page</a>
 	<div class="cell top-left">
 		<h4>Current Patienttttttttttt</h4>
 		<pre id="patient"></pre>
