--- a/example-smart-app/src/student-form.html
+++ b/example-smart-app/src/student-form.html
@@ -3,7 +3,7 @@
 <title>Student form</title>
 </head>
 <body>
-<form action="PParser" method="GET">
+<form action="StudentServlet" method="GET">
 	FIRST NAME: <input type="text" name="firstname" /><br/><br/>
 	LAST NAME: <input type="text" name="lastname" /><br/><br/>
 	<input type="submit" value='Submit'/>
