--- a/example-smart-app/src/launch.html
+++ b/example-smart-app/src/launch.html
@@ -28,7 +28,7 @@
                 iss: "https://api.logicahealth.org/Anima/data",
 
 
-                redirectUri: "https://localhost:8080/jspdemo/index.html"
+                redirectUri: "https://localhost:8080/jspdemo"
             });
   
         </script>
